--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,6 @@ a {
 	text-decoration: none;
 }
 
-
-
 /* Шапка */
 
 .main-nav .main-menu,
@@ -147,24 +145,19 @@ header .main-nav {
 }
 
 .features .features-intro {
-	width: inherit;
+	width: 1200px;
 	min-height: 216px;
 	display: flex;
-	justify-content: center;
-}
-
-.features-intro .container {
-	width: 489px;
-	min-height: inherit;
-	display: flex;
 	flex-direction: column;
-	flex-wrap: wrap;
 	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
 }
 
 .features-intro p:first-child {
 	font-weight: bold;
 	font-size: 21px;
+	width: 600px;
 	text-align: center;
 }
 
@@ -211,9 +204,10 @@ header .main-nav {
 
 .features-list .numbered .city,
 .features-list .numbered .bridge {
-	min-width: 400px;
+	width: 400px;
 	min-height: 256px;
 	display: flex;
+	flex-direction: column;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
@@ -221,24 +215,16 @@ header .main-nav {
 	color: white;
 }
 
-.city .text {
-	min-width: 280px;
-	min-height: 146px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
- .city .text h3 {
+ .city h3 {
 	font-size: 21px;
 	text-align: center;
 	width: 150px;
 	min-height: 50px;	
 }
 
-.city .text p {
+.city p {
 	text-align: center;
-	width: 300px;
+	width: 320px;
 }
 
 .features-list .numbered:first-child .background {
@@ -309,23 +295,14 @@ header .main-nav {
 
 /* Третий блок */
 
-.bridge .text {
-	min-width: 300px;
-	min-height: 146px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-bottom: 15px;
-}
-
- .bridge .text h3 {
+ .bridge h3 {
 	font-size: 21px;
 	text-align: center;
 	width: 160px;
 	min-height: 50px;
 }
 
-.bridge .text p {
+.bridge p {
 	text-align: center;
 	margin-left: 40px;
 	margin-right: 40px;
@@ -350,29 +327,22 @@ header .main-nav {
 
 .features-list .numbered.gray {
 	display: flex;
+	flex-direction: column;
 	width: 400px;
   min-height: 256px;
 	background-color: #eeeeee;
 	align-items: center;
 	justify-content: center;
-}
-
-.numbered.gray .text-container {
-	width: 259px;
 	text-align: center;
 }
 
-.numbered.gray .text-container.middle {
-	width: 270px;
-	min-height: 142px;
-	text-align: center;
-}
-
-.numbered.gray .text-container h3{
+.numbered.gray h3{
 	font-size: 21px;
 	width: 150px;
-	margin-left: auto;
-	margin-right: auto;
+}
+
+.numbered.gray p {
+	width: 280px;
 }
 
 /* Секция с поиском */
@@ -388,28 +358,25 @@ header .main-nav {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: flex-end;
-}
-
-.hotel-search .text-container {
-	width: 500px;
-	min-height: 96px;
-	margin-bottom: 45px;	
 	text-align: center;
 }
 
-.hotel-search .text-container b {
+.hotel-search b {
 	font-size: 30px;
+	margin-top: 50px;
 }
 
-.hotel-search .text-container p {
+.hotel-search p {
+	width: 500px;
 	white-space: pre-line;
+	margin-top: auto;
 }
 
 .hotel-search button {
 	border: none;
 	padding: 0;
 	background: none;
+	margin-top: auto;
 }
 
 .hotel-search .htl-search-btn {
@@ -441,7 +408,6 @@ header .main-nav {
 	flex-direction: column;
 	width: 568px;
 	height: 395px;
-	background-color: white;
 	background-color: white;
 	box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15); 
 	font-weight: bold;
@@ -505,13 +471,8 @@ header .main-nav {
 	height: 22px;
 }
 
-.line-container.persons {
-	display: flex;
-	align-items: center;
-}
-
 .line-container.persons .counter-container:first-child label {
-	margin-right: 41px;
+	margin-right: 44px;
 }
 
 .line-container.persons .counter-container:last-child label {
@@ -537,10 +498,6 @@ header .main-nav {
 	text-align: center;
 }
 
-.counter-container .input-container .less svg {
-	margin-bottom: 3px;
-}
-
 .line-container.persons .input-container {
 	width: 114px;
 }
@@ -548,21 +505,47 @@ header .main-nav {
 .line-container.persons .counter-container {
 	display: flex;
 	align-items: center;
+	justify-content: center;
+}
+
+.input-container .less,
+.input-container .more {
+	color: #cacaca;
+	display: flex;
+	justify-content: center;
+}
+
+.input-container .less .less-icon {
+	font-size: 20px;
+	font-weight: bold;
+	outline: 1px solid red;
+}
+
+.input-container .more .more-icon {
+	font-size: 22px;
+	font-weight: bold;
+	outline: 1px solid red;
 }
 
 .input-container .calendar:hover,
-.input-container .calendar:focus,
-.input-container .less:hover path,
-.input-container .less:focus path,
-.input-container .more:hover path,
-.input-container .more:focus path {
+.input-container .calendar:focus {
 	fill: black;
 }
 
-.input-container .calendar:active,
+.input-container .less:hover,
+.input-container .less:focus,
+.input-container .more:hover,
+.input-container .more:focus {
+	color: black;
+}
+
+.input-container .calendar:active {
+	fill: #81b3d2;
+}
+
 .input-container .less:active,
 .input-container .more:active {
-	fill: #81b3d2;
+	color: #81b3d2;
 }
 
 .hotel-form .form-search-btn {
@@ -674,4 +657,261 @@ footer.index {
 
 .copyright-logo:active path {
 	fill: #bdbbbc;
+}
+
+/* hotels.html*/
+
+/* Секция с фильтром */
+.hotel-filter {
+	width: 1200px;
+	min-height: 217px;
+	background-color: gray;
+	color: white;
+	background-image: url("../img/filter-background.jpg");
+	background-repeat: no-repeat;
+	background-position: 0 -260px;
+}
+
+.filter-form {
+	display: flex;
+	align-items: center;
+}
+
+.filter-form legend {
+	font-size: 16px;
+	font-weight: bold;
+}
+
+.checkbox {
+	outline: 1px solid red;
+}
+
+.checkbox ul li {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+
+.checkbox.infrastructure {
+	width: 200px;
+}
+
+.checkbox.housing {
+	width: 200px;
+}
+
+.price-filter {
+	outline: 1px solid red;
+	width: 330px;
+	margin-left: auto;
+}
+
+/* Секция с сортировкой */
+.search-results {
+	width: 1200px;
+	min-height: 86px;
+	border-bottom: 1px solid #f2f2f2;
+	display: flex;
+	align-items: center;
+}
+
+.search-results b {
+	font-size: 21px;
+	margin-left: 72px;
+	margin-right: 49px;
+}
+
+.search-results .results-sort {
+	font-size: 12px;
+	display: flex;
+}
+
+.results-sort .sort-by {
+	list-style: none;
+	margin: 0;
+	margin-left: 40px;
+	padding: 0;
+	display: flex;
+}
+
+.results-sort .sort-by li {
+	margin-left: 33px;
+}
+
+.results-sort .sort-by li a {
+	color: rgba(0, 0, 0, 0.3);
+	border-bottom: 1px dotted #81b3d2;
+}
+
+.search-results .sort-up-down {
+	margin-right: 73px;
+	margin-left: auto;
+}
+
+.search-results .sort-up-down .sort-btn:first-child {
+	margin-right: 8px;
+}
+
+.results-sort .sort-by .active {
+	color: #81b3d2;
+	border: none;
+}
+
+.results-sort .sort-by a:hover {
+	color: #81b3d2;
+}
+
+.results-sort .sort-by a:active {
+	color: #000000;
+	border: none;
+}
+
+.search-results .sort-up-down .sort-btn path {
+	fill: #cacaca;
+}
+
+.search-results .sort-up-down .sort-btn:hover path {
+	fill: #000000;
+}
+
+.search-results .sort-up-down .sort-btn:active path {
+	fill: #81b3d2;
+}
+
+.search-results .sort-up-down .sort-btn.active path {
+	fill: #81b3d2;
+}
+
+/* Карточки гостиниц */
+.hotels .hotel-list {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.hotel-list .hotel-list-item {
+	width: 1200px;
+	min-height: 150px;
+	display: flex;
+	align-items: center;
+	border-bottom: 1px solid #f2f2f2;
+}
+
+.hotel-list-item .hotel-photo {
+	margin-right: 30px;
+	margin-left: 72px;
+}
+
+.hotel-list-item .hotel-main {
+	min-width: 300px;
+	min-height: 90px;
+	display: flex;
+	flex-direction: column;
+}
+
+.hotel-list-item h3 {
+	margin: 0;
+}
+
+.hotel-list-item p {
+	margin-top: 5px;
+	margin-bottom: 10px;
+	display: flex;
+	width: 206px;
+}
+
+.hotel-list-item p .price {
+	margin-left: auto;
+}
+
+.hotel-main .btn-container {
+	display: flex;
+	min-height: 27px;
+}
+
+.hotel-list-item .hotel-main .btn-more {
+	display: flex;
+	width: 110px;
+	align-items: center;
+	justify-content: center;
+	color: #ffffff;
+	background-color: #81b3d2;
+	text-align: center;
+	line-height: 27px;
+}
+
+.hotel-list-item .hotel-main .btn-book {
+	display: flex;
+	width: 142px;
+	margin-left: 6px;
+	color: #ffffff;
+	background-color: #766357;
+	justify-content: center;
+	align-items: center;
+}
+
+.hotel-main h3 a {
+	font-size: 21px;
+	font-weight: bold;
+	color: #000000;
+}
+
+.hotel-main .btn-more:hover {
+	background-color: #669ec0;
+}
+
+.hotel-main .btn-more:active {
+	background-color: #5496bd;
+	color: rgba(255, 255, 255, 0.3);	
+}
+
+.hotel-main .btn-book:hover {
+	background-color: #604e43;
+}
+
+.hotel-main .btn-book:active {
+	background-color: #503e33;
+	color: rgba(255, 255, 255, 0.3);
+}
+
+.hotel-main h3 a:hover {
+	color: #81b3d2;
+}
+
+.hotel-main h3 a:active {
+	color: rgba(0, 0, 0, 0.3);
+}
+
+.hotel-list-item .hotel-rating {
+	margin-right: 73px;
+	width: 110px;
+	min-height: 90px;
+	margin-left: auto;
+}
+
+.hotel-rating .hotel-stars {
+	display: flex;
+	font-size: 0;
+	flex-direction: row-reverse;
+	text-align: right;
+}
+
+.hotel-rating .hotel-stars img {
+	margin-right: 5px;
+}
+
+.hotel-rating .hotel-stars img:first-child {
+	margin-right: 0;
+}
+
+.hotel-rating .hotel-score {
+	display: flex;
+	width: 110px;
+	min-height: 27px;
+	justify-content: center;
+	align-items: center;
+	margin-top: 40px;
+	background-color: #f2f2f2;
+	color: #666666;	
 }
