--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 
 .gray-back {
 	background-color: #f2f2f2;
+	width: 100%;
 }
 
 .site-wrapper {
@@ -93,6 +94,14 @@ a {
 	margin-left: 72px;
 }
 
+.menu-item:nth-child(2) a {
+	padding-left: 13px;
+}
+
+.menu-item:nth-child(3) a {
+	padding-right: 17px;
+}
+
 .menu-item:last-child a {
 	margin-right: 72px;
 }
@@ -116,21 +125,19 @@ a {
 
 .intro {
 	width: 1200px;
-	height: 509px;
+	height: 508px;
 	background-image: 
 	url("../img/intro-mask.svg"),
 	url("../img/background-photo.jpg");
 	background-repeat: no-repeat;
 	background-position: 
-	0 452px,
-	0 -80px;
+	0 451px,
+	0 -83px;
 }
 
 .intro img {
-	margin-top: 80px;
-	margin-right: 371px;
-	margin-bottom: 80px;
-	margin-left: 371px;
+	margin-top: 76px;
+	margin-left: 370px;
 }
 
 /* Фичи - текст */
@@ -147,7 +154,6 @@ a {
 	min-height: 216px;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
 }
@@ -157,6 +163,8 @@ a {
 	font-size: 21px;
 	line-height: 26px;
 	width: 600px;
+	margin-top: 60px;
+	margin-bottom: 12px;
 	text-align: center;
 }
 
@@ -190,7 +198,6 @@ a {
 	min-height: 256px;
 	flex-wrap: wrap;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
 	background-color: #81b3d2;
 	color: white;
@@ -201,12 +208,13 @@ a {
 	font-size: 21px;
 	text-align: center;
 	width: 150px;
-	min-height: 50px;	
+	margin-top: 48px;
 }
 
 .city p {
 	text-align: center;
-	width: 320px;
+	width: 290px;
+	margin-top: 22px;
 }
 
 .first .background {
@@ -231,7 +239,6 @@ a {
 .not-numbered-list li {
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-end;
 	width: 400px;
 	min-height: 330px;
 	text-align: center;
@@ -240,7 +247,8 @@ a {
 .not-numbered-list h3 {
 	font-size: 21px;
 	position: relative;
-	margin-bottom: 8px;
+	margin-top: 160px;
+	margin-bottom: 11px;
 }
 
 .life::before {
@@ -250,7 +258,7 @@ a {
 	background-repeat: no-repeat;
 	width: 75px;
 	height: 72px;
-	bottom: 50px;
+	bottom: 49px;
 	left: 162px;
 }
 
@@ -272,8 +280,8 @@ a {
 	background-repeat: no-repeat;
 	width: 64px;
 	height: 76px;
-	bottom: 50px;
-	left: 165px;
+	bottom: 49px;
+	left: 168px;
 }
 
 .not-numbered-list p {
@@ -297,7 +305,6 @@ a {
 	min-height: 256px;
 	flex-wrap: wrap;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
 	background-color: #81b3d2;
 	color: white;
@@ -307,15 +314,15 @@ a {
 .bridge h3 {
 	font-size: 21px;
 	text-align: center;
-	width: 160px;
-	min-height: 50px;
+	width: 151px;
+	margin-top: 46px;
+	margin-bottom: 24px;
 }
 
 .bridge p {
 	text-align: center;
-	margin-left: 40px;
-	margin-right: 40px;
 	width: 320px;
+	margin-top: 21px;
 }
 
 .numbered.second .background {
@@ -324,7 +331,7 @@ a {
 	min-height: 256px;
 	background-image: url("../img/feature-picture-2.jpg");
 	background-repeat: no-repeat;
-	background-position: 0 -75px;
+	background-position: 0 -76px;
 	order: -1;
 } 
 
@@ -337,17 +344,20 @@ a {
   min-height: 256px;
 	background-color: #eeeeee;
 	align-items: center;
-	justify-content: center;
 	text-align: center;
+	line-height: 21px;
 }
 
 .numbered.gray h3{
 	font-size: 21px;
 	width: 150px;
+	margin-top: 47px;
+	margin-bottom: 24px;
 }
 
 .numbered.gray p {
 	width: 270px;
+	margin-top: 22px;
 }
 
 .numbered.gray:last-child p {
@@ -357,13 +367,12 @@ a {
 /* Секция с поиском */
 
 .hotel-search {
-	background: transparent;
 	position: relative;
 }
 
 .hotel-search .search-intro {
 	width: 1200px;
-	min-height: 298px;
+	min-height: 291px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -372,20 +381,22 @@ a {
 
 .hotel-search b {
 	font-size: 30px;
+	line-height: 36px;
 	margin-top: 50px;
 }
 
 .hotel-search p {
 	width: 500px;
+	line-height: 24px;
 	white-space: pre-line;
-	margin-top: auto;
+	margin-top: 25px;
 }
 
 .hotel-search button {
 	border: none;
 	padding: 0;
 	background: none;
-	margin-top: auto;
+	margin-top: 32px;
 }
 
 .hotel-search .htl-search-btn {
@@ -439,7 +450,7 @@ a {
 	display: flex;
 	align-items: center;
 	margin-bottom: 30px;
-	justify-content: center;
+	margin-left: 55px;
 }
 
 .hotel-form .line-container:first-child {
@@ -447,8 +458,12 @@ a {
 }
 
 .line-container label {
-	margin-right: 21px;
+	margin-right: 24px;
 	cursor: pointer;
+}
+
+.line-container:nth-child(2) label {
+	margin-right: 21px;
 }
 
 .hotel-form .input-container {
@@ -463,7 +478,7 @@ a {
 }
 
 .input-container input {
-	width: 290px;
+	width: 295px;
 	padding-left: 13px;
 }
 
@@ -483,21 +498,16 @@ a {
 	cursor: pointer;
 }
 
-.line-container.persons .counter-container:first-child label {
-	margin-right: 44px;
+.counter-container:first-child label {
+	margin-right: 41px;
 }
 
-.line-container.persons .counter-container:last-child label {
-	margin-right: 21px;
+.counter-container:last-child label {
+	margin-right: 25px;
 }
 
-.line-container.persons .counter-container:first-child {
-	margin-right: 60px;
-	margin-left: auto;
-}
-
-.line-container.persons .counter-container:last-child {
-	margin-right: auto;
+.counter-container:first-child {
+	margin-right: 55px;
 }
 
 .input-container .less,
@@ -517,7 +527,6 @@ a {
 .line-container.persons .counter-container {
 	display: flex;
 	align-items: center;
-	justify-content: center;
 }
 
 .input-container .less {
@@ -581,7 +590,7 @@ a {
 	text-transform: uppercase;
 	text-align: center;
 	line-height: 58px;
-	margin-top: 20px;
+	margin-top: 23px;
 	margin-right: auto;
 	margin-left: auto;
 	cursor: pointer;
