--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body {
 	text-transform: uppercase;
 	color: #000000;
 		
-	width: 1200px;
 	margin: 0 auto;
   padding: 0;
 	
@@ -14,7 +13,7 @@ body {
 
 .gray-back {
 	background-color: #f2f2f2;
-	width: 100%;
+	width: 100vw;
 }
 
 .site-wrapper {
@@ -697,12 +696,13 @@ footer.index {
 /* Секция с фильтром */
 .hotel-filter {
 	width: 1200px;
-	min-height: 217px;
+	height: 217px;
 	background-color: gray;
 	color: white;
+	line-height: 21px;
 	background-image: url("../img/filter-background.jpg");
 	background-repeat: no-repeat;
-	background-position: 0 -260px;
+	background-position: 0 -294px;
 }
 
 .filter-form {
@@ -711,7 +711,6 @@ footer.index {
 
 .filter-form .legend {
 	font-size: 16px;
-	line-height: 21px;
 	font-weight: bold;
 }
 
@@ -719,7 +718,12 @@ footer.index {
 .checkbox-list .checkbox-list-item {
 	list-style: none;
 	margin: 0;
+	margin-bottom: -5px;
 	padding: 0;
+}
+
+.checkbox-list .checkbox-list-item:last-child {
+	margin-top: -6px;
 }
 
 .checkbox.infrastructure {
@@ -730,20 +734,20 @@ footer.index {
 
 .checkbox.infrastructure .legend {
 	display: block;
-	margin-top: 30px;
-	margin-bottom: 30px;
+	margin-top: 27px;
+	margin-bottom: 26px;
 }
 
 .checkbox.housing {
 	width: 150px;
-	margin-left: 95px;
+	margin-left: 105px;
 }
 
 .checkbox.housing .legend {
 	display: block;
 	position: relative;
-	margin-top: 30px;
-	margin-bottom: 30px;
+	margin-top: 27px;
+	margin-bottom: 26px;
 	margin-left: 0px;
 }
 
@@ -789,8 +793,8 @@ footer.index {
 /* Слайдер */
 
 .price-filter {
-	width: 330px;
-	margin-right: 74px;
+	width: 318px;
+	margin-right: 72px;
 	margin-left: auto;
 }
 
@@ -799,13 +803,13 @@ footer.index {
 	font-size: 16px;
 	line-height: 21px;
 	font-weight: bold;
-	margin-top: 30px;
-	margin-bottom: 13px;
+	margin-top: 27px;
+	margin-bottom: 10px;
 }
 
 .price-input {
 	position: relative;
-	height: 36px;
+	height: 32px;
 	margin-bottom: 20px;
 	font-size: 0;
   border: 2px solid #ffffff;
@@ -815,12 +819,11 @@ footer.index {
 .price-input::after {
 	content: "";
 	position: absolute;
-	top: 50%;
+	top: 15%;
 	left: 50%;
   width: 2px;
   height: 22px;
 	background: #ffffff;
-	transform: translate(-50%, -50%);
 }
 
 .price-input label {
@@ -831,10 +834,14 @@ footer.index {
 	cursor: pointer;
 }
 
-.price-input .min-price,
-.price-input .max-price {
+.price-input .min-price {
   width: 90px;
   padding-left: 65px;
+}
+
+.price-input .max-price {
+	width: 90px;
+	padding-left: 57px;
 }
 
 .price-input input {
@@ -883,11 +890,12 @@ footer.index {
 }
 
 .btn-transparent {
-  display: block;
-  margin: 0 auto;
-  padding: 6px 35px;
-  font-size: 14px;
-  line-height: 21px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 137px;
+	height: 36px;
+	margin-left: 85px;
   color: #ffffff;
   text-transform: uppercase;
   background: transparent;
@@ -903,7 +911,6 @@ footer.index {
 
 /* Секция с сортировкой */
 .search-results {
-	width: 1200px;
 	min-height: 86px;
 	border-bottom: 1px solid #f2f2f2;
 	display: flex;
@@ -911,30 +918,31 @@ footer.index {
 
 .search-results b {
 	font-size: 21px;
-	margin-top: 30px;
-	margin-right: 49px;
-	margin-left: 72px;
+	margin-top: 31px;
+	margin-right: 48px;
+	margin-left: 71px;
 }
 
 .search-results .results-sort {
 	font-size: 12px;
+	line-height: 18px;
 	display: flex;
-	margin-top: 33px;
+	margin-top: 36px;
 }
 
 .results-sort .sort-by {
 	list-style: none;
 	margin: 0;
-	margin-left: 40px;
+	margin-left: 8px;
 	padding: 0;
 	display: flex;
 }
 
-.results-sort .sort-by li {
+.sort-by li {
 	margin-left: 33px;
 }
 
-.results-sort .sort-by li a {
+.sort-by a {
 	color: rgba(0, 0, 0, 0.3);
 	border-bottom: 1px dotted #81b3d2;
 }
@@ -945,37 +953,37 @@ footer.index {
 	margin-left: auto;
 }
 
-.search-results .sort-up-down .sort-btn:first-child {
+.sort-up-down .sort-btn:first-child {
 	margin-right: 8px;
 }
 
-.results-sort .sort-by .active {
+.sort-by .active {
 	color: #81b3d2;
 	border: none;
 }
 
-.results-sort .sort-by a:hover {
+.sort-by a:hover {
 	color: #81b3d2;
 }
 
-.results-sort .sort-by a:active {
+.sort-by a:active {
 	color: #000000;
 	border: none;
 }
 
-.search-results .sort-up-down .sort-btn path {
+ .sort-btn path {
 	fill: #cacaca;
 }
 
-.search-results .sort-up-down .sort-btn:hover path {
+.sort-btn:hover path {
 	fill: #000000;
 }
 
-.search-results .sort-up-down .sort-btn:active path {
+.sort-btn:active path {
 	fill: #81b3d2;
 }
 
-.search-results .sort-up-down .sort-btn.active path {
+.sort-btn.active path {
 	fill: #81b3d2;
 }
 
@@ -990,11 +998,11 @@ footer.index {
 	width: 1200px;
 	min-height: 150px;
 	display: flex;
-	align-items: center;
 	border-bottom: 1px solid #f2f2f2;
 }
 
 .hotel-list-item .hotel-photo {
+	margin-top: 30px;
 	margin-right: 30px;
 	margin-left: 72px;
 }
@@ -1004,29 +1012,35 @@ footer.index {
 	min-height: 90px;
 	display: flex;
 	flex-direction: column;
+	padding-top: 25px;
 }
 
 .hotel-list-item h3 {
 	margin: 0;
+	font-size: 21px;
+	line-height: 26px;
+	font-weight: bold;
+	color: #000000;
 }
 
 .hotel-list-item p {
 	margin-top: 5px;
-	margin-bottom: 10px;
+	margin-bottom: 13px;
 	display: flex;
-	width: 206px;
+	width: 181px;
 }
 
-.hotel-list-item p .price {
+.hotel-list-item .price {
 	margin-left: auto;
 }
 
 .hotel-main .btn-container {
 	display: flex;
 	min-height: 27px;
+	line-height: 21px;
 }
 
-.hotel-list-item .hotel-main .btn-more {
+.hotel-main .btn-more {
 	display: flex;
 	width: 110px;
 	align-items: center;
@@ -1034,10 +1048,9 @@ footer.index {
 	color: #ffffff;
 	background-color: #81b3d2;
 	text-align: center;
-	line-height: 27px;
 }
 
-.hotel-list-item .hotel-main .btn-book {
+.hotel-main .btn-book {
 	display: flex;
 	width: 142px;
 	margin-left: 6px;
@@ -1045,12 +1058,6 @@ footer.index {
 	background-color: #766357;
 	justify-content: center;
 	align-items: center;
-}
-
-.hotel-main h3 a {
-	font-size: 21px;
-	font-weight: bold;
-	color: #000000;
 }
 
 .hotel-main .btn-more:hover {
@@ -1071,11 +1078,11 @@ footer.index {
 	color: rgba(255, 255, 255, 0.3);
 }
 
-.hotel-main h3 a:hover {
+.hotel-main a:hover {
 	color: #81b3d2;
 }
 
-.hotel-main h3 a:active {
+.hotel-main a:active {
 	color: rgba(0, 0, 0, 0.3);
 }
 
@@ -1084,6 +1091,7 @@ footer.index {
 	width: 110px;
 	min-height: 90px;
 	margin-left: auto;
+	padding-top: 29px;
 }
 
 .hotel-rating .hotel-stars {
@@ -1093,7 +1101,7 @@ footer.index {
 	text-align: right;
 }
 
-.hotel-rating .hotel-stars img {
+.hotel-stars img {
 	margin-right: 5px;
 }
 
