--- a/css/style.css
+++ b/css/style.css
@@ -677,7 +677,7 @@ a {
 /* Секция с фильтром */
 .hotel-filter {
 	width: 1200px;
-	height: 217px;
+	min-height: 217px;
 	background-color: gray;
 	color: white;
 	line-height: 21px;
