--- a/css/style.css
+++ b/css/style.css
@@ -767,6 +767,10 @@ a {
 	background-image: url("../img/checkbox-on-disabled.svg");
 }
 
+.checkbox-input:focus + label::before {
+	box-shadow: 0px 0px 3px 2px rgba(0,0,0, 0.50);
+}
+
 /* Слайдер */
 
 .price-filter {
@@ -862,7 +866,8 @@ a {
 	left: 80%;
 }
 
-.slider-btn:hover svg {
+.slider-btn:hover svg,
+.slider-btn:focus svg {
 	width: 22px;
 	height: 24px;
 	transform: translate(-1px, -0.5px);
@@ -883,7 +888,8 @@ a {
   cursor: pointer;
 }
 
-.btn-transparent:hover {
+.btn-transparent:hover,
+.btn-transparent:focus {
   color: #000000;
   background: #ffffff;
 }
@@ -941,7 +947,8 @@ a {
 	border: none;
 }
 
-.sort-by a:hover {
+.sort-by a:hover,
+.sort-by a:focus {
 	color: #81b3d2;
 }
 
@@ -954,7 +961,8 @@ a {
 	fill: #cacaca;
 }
 
-.sort-btn:hover path {
+.sort-btn:hover path,
+.sort-btn:focus path {
 	fill: #000000;
 }
 
@@ -1039,7 +1047,17 @@ a {
 	align-items: center;
 }
 
-.hotel-main .btn-more:hover {
+.hotel-main .hotel-link:hover,
+.hotel-main .hotel-link:focus {
+	color: #81b3d2;
+}
+
+.hotel-main .hotel-link:active {
+	color: rgba(0, 0, 0, 0.3);
+}
+
+.hotel-main .btn-more:hover,
+.hotel-main .btn-more:focus {
 	background-color: #669ec0;
 }
 
@@ -1048,21 +1066,14 @@ a {
 	color: rgba(255, 255, 255, 0.3);	
 }
 
-.hotel-main .btn-book:hover {
+.hotel-main .btn-book:hover,
+.hotel-main .btn-book:focus {
 	background-color: #604e43;
 }
 
 .hotel-main .btn-book:active {
 	background-color: #503e33;
 	color: rgba(255, 255, 255, 0.3);
-}
-
-.hotel-main a:hover {
-	color: #81b3d2;
-}
-
-.hotel-main a:active {
-	color: rgba(0, 0, 0, 0.3);
 }
 
 .hotel-list-item .hotel-rating {
