--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-	font-family: 'PT Sans', sans-serif;
+	font-family: 'PT Sans', 'Tahoma', sans-serif;
 	font-size: 14px;
 	line-height: 24px;
 	text-transform: uppercase;
