--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,6 @@ a {
 }
 
 .first .feature-picture-1 {
-	display: flex;
 	object-fit: cover;
 }
 
@@ -350,13 +349,13 @@ a {
 	text-align: center;
 }
 
-.hotel-search b {
+.hotel-search-b {
 	font-size: 30px;
 	line-height: 36px;
 	margin-top: 50px;
 }
 
-.hotel-search p {
+.hotel-search-p {
 	width: 500px;
 	line-height: 24px;
 	white-space: pre-line;
@@ -367,12 +366,12 @@ a {
 	border: none;
 	padding: 0;
 	background: none;
-	margin-top: 32px;
 }
 
 .hotel-search .htl-search-btn {
 	width: 568px;
 	min-height: 86px;
+	margin-top: 32px;
 	background-color: #766357;
 	font-size: 21px;
 	font-weight: bold;
@@ -401,87 +400,77 @@ a {
 	display: flex;
 	flex-direction: column;
 	width: 568px;
-	height: 395px;
+	min-height: 395px;
 	background-color: white;
 	box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15); 
 	font-weight: bold;
+	line-height: 26px;
 }
 
-.hotel-form input {
+.hotel-form .form-input {
 	text-transform: uppercase;
 	font-weight: bold;
 	background: none;
+	background-color: #f2f2f2;
 	border: none;
-	padding: 0;
+	padding-left: 13px;
 }
 
-.hotel-form .line-container {
+.hotel-form .form-line-container {
 	display: flex;
 	align-items: center;
-	margin-bottom: 30px;
-	margin-left: 55px;
+	padding-left: 55px;
+	position: relative;
 }
 
-.hotel-form .line-container:first-child {
+.hotel-form .form-line-container:first-child {
 	margin-top: 55px;
 }
 
-.line-container label {
+.form-line-container label {
 	margin-right: 24px;
 	cursor: pointer;
 }
 
-.line-container:nth-child(2) label {
+.form-line-container:nth-child(2) label {
 	margin-right: 21px;
 }
 
-.hotel-form .input-container {
-	width: 346px;
+.hotel-form .form-input.big {
+	width: 333px;
 	height: 38px;
-	background-color: #f2f2f2;
-	display: flex;
 }
 
-.hotel-form .input-container:hover {
-	background-color: #ebebeb;
-}
-
-.input-container input {
-	width: 295px;
-	padding-left: 13px;
-}
-
-.input-container input:focus {
-	outline: 2px solid #e5e5e5;
-  background-color: #ffffff;
-}
-
-.input-container .calendar {
+.form-line-container .calendar {
 	fill: #a9a9a9;
-	margin-left: auto;
-	margin-top: auto;
-	margin-right: 9px;
-	margin-bottom: auto;
 	width: 21px;
 	height: 22px;
 	cursor: pointer;
+	position: absolute;
+	right: 63px;
+	bottom: 9px;
 }
 
-.counter-container:first-child label {
+.person-counter-container {
+	display: flex;
+	align-items: center;
+}
+
+.adults-counter {
+	margin-right: 54px;
+}
+
+.adults-counter label {
 	margin-right: 41px;
 }
 
-.counter-container:last-child label {
+.children-counter label {
 	margin-right: 25px;
 }
 
-.counter-container:first-child {
-	margin-right: 55px;
-}
-
-.input-container .less,
-.input-container .input-small,
-.input-container .more {
+.person-counter-container .btn-less,
+.person-counter-container .form-input.small,
+.person-counter-container .btn-more {
 	width: 38px;
 	height: 38px;
 	margin: 0;
@@ -489,64 +478,22 @@ a {
 	text-align: center;
 }
 
-.line-container.persons .input-container {
-	width: 114px;
-}
-
-.line-container.persons .counter-container {
-	display: flex;
-	align-items: center;
-}
-
-.input-container .less {
+.person-counter-container .btn-less {
 	font-size: 0px;
 	background-image: url("../img/less-idle.png");
 	background-repeat: no-repeat;
 	background-position: 50%;
+	background-color: #f2f2f2;
 	cursor: pointer;
 }
 
-.input-container .less:hover,
-.input-container .less:focus {
-	background-image: url("../img/less-hover.png");
-	background-repeat: no-repeat;
-	background-position: 50%;
-}
-
-.input-container .less:active {
-	background-image: url("../img/less-active.png");
-	background-repeat: no-repeat;
-	background-position: 50%;
-}
-
-.input-container .more {
+.person-counter-container .btn-more {
 	font-size: 0px;
 	background-image: url("../img/more-idle.png");
 	background-repeat: no-repeat;
 	background-position: 50%;
+	background-color: #f2f2f2;
 	cursor: pointer;
-}
-
-.input-container .more:hover,
-.input-container .more:focus {
-	background-image: url("../img/more-hover.png");
-	background-repeat: no-repeat;
-	background-position: 50%;
-}
-
-.input-container .more:active {
-	background-image: url("../img/more-active.png");
-	background-repeat: no-repeat;
-	background-position: 50%;
-}
-
-.input-container .calendar:hover,
-.input-container .calendar:focus {
-	fill: black;
-}
-
-.input-container .calendar:active {
-	fill: #81b3d2;
 }
 
 .hotel-form .form-search-btn {
@@ -558,11 +505,57 @@ a {
 	color: white;
 	text-transform: uppercase;
 	text-align: center;
-	line-height: 58px;
-	margin-top: 23px;
+	margin-top: 40px;
 	margin-right: auto;
 	margin-left: auto;
 	cursor: pointer;
+}
+
+/* Смена статуса в форме */
+.hotel-form .form-input:hover,
+.person-counter-container .btn-less:hover,
+.person-counter-container .btn-more:hover {
+	background-color: #ebebeb;
+}
+
+.hotel-form .form-input:focus {
+	outline: 2px solid #e5e5e5;
+  background-color: #ffffff;
+}
+
+.person-counter-container .btn-less:hover,
+.person-counter-container .btn-less:focus {
+	background-image: url("../img/less-hover.png");
+	background-repeat: no-repeat;
+	background-position: 50%;
+}
+
+.person-counter-container .btn-less:active {
+	background-image: url("../img/less-active.png");
+	background-repeat: no-repeat;
+	background-position: 50%;
+}
+
+.person-counter-container .btn-more:hover,
+.person-counter-container .btn-more:focus {
+	background-image: url("../img/more-hover.png");
+	background-repeat: no-repeat;
+	background-position: 50%;
+}
+
+.person-counter-container .btn-more:active {
+	background-image: url("../img/more-active.png");
+	background-repeat: no-repeat;
+	background-position: 50%;
+}
+
+.form-line-container .calendar:hover,
+.form-line-container .calendar:focus {
+	fill: black;
+}
+
+.form-line-container .calendar:active {
+	fill: #81b3d2;
 }
 
 .btn-blue:hover,
@@ -582,11 +575,11 @@ a {
 /* Подвал */
 
 .page-footer {
-	width: 1200px;
 	display: flex;
-	align-items: center;
+	min-height: 120px;
 	margin: 0;
 	position: relative;
+	line-height: 26px;
 }
 
 .page-footer.index {
@@ -596,8 +589,8 @@ a {
 .footer-hashtag {
 	width: 400px;
 	font-size: 21px;
+	padding: calc((120px - 16px) / 2) 0; 
 	text-align: center;
-	line-height: 120px;
 }
 
 .social-btn {
